# slick_navigation

./: README.md
slick/slick_description/: CMakeLists.txt  package.xml
slick/slick_description/launch/: display_slick.launch.py  gazebo_slick.launch.py
slick/slick_description/meshes/gripper_and_camera/: Gripper.STL
slick/slick_description/meshes/slick_base/: base_link.STL  lidar2_link.STL  lidar_link.STL
slick/slick_description/rviz/: config.rviz
slick/slick_description/urdf/: camera.urdf.xacro  gripper.urdf.xacro  lite6.urdf.xacro  slick.urdf.xacro  slick_base.urdf.xacro
slick/slick_moveit/: CMakeLists.txt  package.xml
slick/slick_moveit/launch/: _slick_moveit_fake.launch.py
slick/slick_moveit/srdf/: _lite6_macro.srdf.xacro
xarm_ros2/xarm_description/urdf/: xarm_device.urdf.xacro
xarm_ros2/xarm_moveit_config/srdf/: _lite6_macro.srdf.xacro  xarm_macro.srdf.xacro
